<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".qrscanner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode_amp_qr_code_scanner"
            android:textAlignment="center"
            style ="@style/TextAppearance.MaterialComponents.Headline6"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/galleryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/imageIv"
            android:layout_width="match_parent"
            android:src="@drawable/ic_android_black_24dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/result"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/resultTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</ScrollView>